--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,9 +5,25 @@
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   background-color: #f8f9fa;
   font-family: "Manrope", sans-serif;
+  min-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 button:focus,
@@ -77,30 +93,23 @@ button:active {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
 }
 
-.books .book-item img {
-  object-fit: cover;
+.shine {
+  position: relative;
+  display: inline-block;
+}
+
+.shine::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  aspect-ratio: 5/8;
-}
-
-img:not([src]) {
-  visibility: hidden;
-}
-
-@-moz-document url-prefix() {
-  img:-moz-loading {
-    visibility: hidden;
-  }
-}
-
-.shine {
   background: #d6d6d6;
   background-image: linear-gradient(to right, #d6d6d6 0%, #c8c8c8 20%, #d6d6d6 40%, #d6d6d6 100%);
   background-repeat: no-repeat;
   background-size: cover;
-  display: inline-block;
-  position: relative;
+  display: block;
 
   animation-duration: 1s;
   animation-fill-mode: forwards;
@@ -119,8 +128,36 @@ img:not([src]) {
   }
 }
 
+.lazy {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.lazy.loaded {
+  opacity: 1;
+  position: relative;
+}
+
+.books .book-item img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 5/8;
+}
+
+@-moz-document url-prefix() {
+  img:-moz-loading {
+    visibility: hidden;
+  }
+}
+
 main[up-source] #detail {
-  margin: 0 !important;
+  margin: 1.75rem 0 1.25rem !important;
+}
+
+[up-dismiss] {
+  font-size: 3rem;
+  color: #000;
 }
 
 table tr > th {
